--- a/13Books_front/package.json
+++ b/13Books_front/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
